--- a/login.html
+++ b/login.html
@@ -8,10 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="icon" href="/public/favicon.ico" sizes="any">
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
-    <link rel="apple-touch-icon" href="/public/apple-touch-icon.png">
-    <link rel="manifest" href="/public/site.webmanifest">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -32,7 +32,7 @@
     <div class="w-full max-w-sm mx-auto">
         <header class="text-center mb-8">
             <a href="/" class="inline-block mb-4">
-                <img src="/public/android-chrome-192x192.png" alt="SitePulse Logo" class="h-16 w-16 mx-auto">
+                <img src="/android-chrome-192x192.png" alt="SitePulse Logo" class="h-16 w-16 mx-auto">
             </a>
             <h1 class="text-3xl font-bold text-gray-800">SitePulse</h1>
             <p class="text-gray-600 mt-2">Welcome back. Please sign in to continue.</p>
