--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" href="/images/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+    <link rel="manifest" href="/images/site.webmanifest">
     <meta property="og:title" content="SitePulse - 24/7 Website Monitoring">
     <meta property="og:description"
         content="Get instant alerts when your website goes down and gain insights into its performance.">
-    <meta property="og:image" content="https://sitepulse.vercel.app/cover.webp">
+    <meta property="og:image" content="https://sitepulse.vercel.app/images/cover.webp">
     <meta property="og:url" content="https://sitepulse.vercel.app">
     <meta name="twitter:card" content="summary_large_image">
     <style>
@@ -39,7 +39,7 @@
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="/favicon-32x32.png" alt="SitePulse Logo" class="h-8 w-8">
+                <img src="/images/favicon-32x32.png" alt="SitePulse Logo" class="h-8 w-8">
                 <span class="font-bold text-xl ml-2 text-gray-900">SitePulse</span>
             </div>
             <div>
