--- a/dashboard.html
+++ b/dashboard.html
@@ -244,7 +244,7 @@
                 userEmailEl.textContent = user.email;
                 fetchMonitors(user.uid);
             } else {
-                window.location.href = '/login.html';
+                window.location.href = '/login';
             }
         });
 
