--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <span class="font-bold text-xl ml-2 text-gray-900">SitePulse</span>
             </div>
             <div>
-                <a href="/login.html"
+                <a href="/login"
                     class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-5 rounded-lg transition duration-300">
                     Sign In
                 </a>
@@ -61,7 +61,7 @@
                     Never miss a beat. Get instant alerts when your website goes down and gain insights into its
                     performance. Simple, powerful, and free.
                 </p>
-                <a href="/login.html"
+                <a href="/login"
                     class="mt-8 inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-8 rounded-lg text-lg transition duration-300 shadow-lg">
                     Start Monitoring for Free
                 </a>
