--- a/login.html
+++ b/login.html
@@ -71,6 +71,11 @@
                     <h2 class="text-xl font-semibold text-gray-700 mb-6 text-center">Create Account</h2>
                     <div class="space-y-4">
                         <div>
+                            <label for="register-name" class="block text-sm font-medium text-gray-600">Name</label>
+                            <input type="text" id="register-name" required
+                                class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-red-500 focus:border-red-500 transition">
+                        </div>
+                        <div>
                             <label for="register-email" class="block text-sm font-medium text-gray-600">Email</label>
                             <input type="email" id="register-email" required
                                 class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-red-500 focus:border-red-500 transition">
@@ -79,6 +84,12 @@
                             <label for="register-password"
                                 class="block text-sm font-medium text-gray-600">Password</label>
                             <input type="password" id="register-password" required
+                                class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-red-500 focus:border-red-500 transition">
+                        </div>
+                        <div>
+                            <label for="register-confirm-password"
+                                class="block text-sm font-medium text-gray-600">Confirm Password</label>
+                            <input type="password" id="register-confirm-password" required
                                 class="mt-1 block w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-red-500 focus:border-red-500 transition">
                         </div>
                     </div>
@@ -97,11 +108,10 @@
     </div>
 
     <script type="module">
-        // Import only the functions we need from the Firebase SDKs
         import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
+        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged, updateProfile } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
+        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
-        // Your specific Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyD-hl1Z4xs0QBi6TRbEqCEPzymF-Hp_5VY",
             authDomain: "uptime-monitor-2025.firebaseapp.com",
@@ -112,11 +122,10 @@
             measurementId: "G-F4PE1SG04W"
         };
 
-        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
+        const db = getFirestore(app);
 
-        // Redirect if user is already logged in
         onAuthStateChanged(auth, user => {
             if (user) {
                 window.location.href = '/dashboard';
@@ -127,7 +136,6 @@
         const registerForm = document.getElementById('register-form');
         const messageArea = document.getElementById('message-area');
 
-        // Login logic
         loginForm.addEventListener('submit', (e) => {
             e.preventDefault();
             const email = loginForm['login-email'].value;
@@ -141,13 +149,31 @@
                 });
         });
 
-        // Register logic
         registerForm.addEventListener('submit', (e) => {
             e.preventDefault();
+            const name = registerForm['register-name'].value;
             const email = registerForm['register-email'].value;
             const password = registerForm['register-password'].value;
+            const confirmPassword = registerForm['register-confirm-password'].value;
+
+            if (password !== confirmPassword) {
+                messageArea.textContent = "Passwords do not match.";
+                return;
+            }
+
             createUserWithEmailAndPassword(auth, email, password)
                 .then(cred => {
+                    return updateProfile(cred.user, {
+                        displayName: name
+                    }).then(() => {
+                        const userDocRef = doc(db, "users", cred.user.uid);
+                        return setDoc(userDocRef, {
+                            name: name,
+                            email: email
+                        });
+                    });
+                })
+                .then(() => {
                     window.location.href = '/dashboard';
                 })
                 .catch(err => {
@@ -155,7 +181,6 @@
                 });
         });
 
-        // Toggle between forms
         const showRegisterLink = document.getElementById('show-register');
         const showLoginLink = document.getElementById('show-login');
         const loginContainer = document.getElementById('login-container');
