--- a/dashboard.html
+++ b/dashboard.html
@@ -87,7 +87,7 @@
     </style>
 </head>
 
-<body class="bg-gray-50 flex flex-col min-h-screen">
+<body class="bg-white flex flex-col min-h-screen">
 
     <nav class="bg-white shadow-md">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
