--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 
-<body class="bg-gray-50 min-h-screen flex flex-col items-center justify-center p-4">
+<body class="bg-white min-h-screen flex flex-col items-center justify-center p-4">
 
     <div class="w-full max-w-sm mx-auto">
         <header class="text-center mb-8">
