--- a/login.html
+++ b/login.html
@@ -27,9 +27,9 @@
     </style>
 </head>
 
-<body class="bg-white min-h-screen flex flex-col items-center justify-center p-4">
+<body class="bg-white min-h-screen flex flex-col items-center justify-center">
 
-    <div class="w-full max-w-sm mx-auto">
+    <div class="w-full max-w-sm mx-auto p-4">
         <header class="text-center mb-8">
             <a href="/" class="inline-block mb-4">
                 <img src="/images/android-chrome-192x192.png" alt="SitePulse Logo" class="h-16 w-16 mx-auto">
